style.css
@import url(reset.css);

@font-face {
  font-family: "momcake";
  src: url(./assets/fonts/MomcakeBold-WyonA.otf);
}

html,
body {
  min-height: 100vh;
  background-color: black;
  font-family: "momcake";
}

/*                       MAIN GRID SETUP                      */

.main-content {
  height: 100vh;
  display: grid;
  grid-template-columns: 300px minmax(700px, 1fr);
  grid-template-rows: 200px minmax(700px, 1fr);
}

/*                        HEADER STYLE                        */

.header {
  background-color: white;
  grid-area: 1 / 2 / 2 / 3;
  display: grid;
  grid-template-columns: 2fr repeat(3, 1fr);
  padding-left: 15px;
}

.left-header {
  display: grid;
  grid-template-rows: 1fr 2fr;
  grid-template-columns: repeat(4, 1fr);
  grid-column: 1 / 3;
}

.right-header {
  font-size: 24px;
  grid-column: 3 / 5;
  display: flex;
  flex-direction: column;
}

.right-head-cont-upper {
  margin-left: 90px;
  padding: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 40px;
  grid-row: 1 / 2;
}

.right-head-cont-lower {
  height: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  grid-row: 2 / 3;
  gap: 40px;
}

button {
  border-style: none;
  border-radius: 25px;
  background-color: #2c8ec7;
  color: white;
  font-weight: bold;
  height: clamp(30px, 60%, 50px);
  width: clamp(90px, 25%, 115px);
}

button:hover {
  opacity: 0.9;
}

.left-head-cont-upper {
  padding-top: 20px;
  padding-left: 50px;
  grid-column: 1 / 5;
  display: flex;
  gap: 20px;
  justify-content: flex-end;
  align-items: center;
}

.left-head-cont-lower {
  grid-row: 2 / 3;
  grid-column: 1 / 5;
  display: flex;
  align-items: center;
  gap: 20px;
}

.head-marg-up {
  padding-top: 30px;
  font-weight: bold;
  font-size: 18px;
}

.head-marg-low {
  font-weight: bolder;
  font-size: 30px;
}

.left-head-wrap {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.mountain {
  padding-left: 50px;
  padding-top: 25px;
}

input {
  background-color: #dce2e5;
  border-style: none;
  border-radius: 20px;
  height: 80%;
  width: 100%;
}

p[class*="head-marg"] {
  margin: 0;
}

/*                        SIDEBAR STYLE                        */

.sidebar {
  background-color: #2c8ec7;
  color: white;
  grid-area: 1 / 1 / 6 / 2;
  display: grid;
  grid-template-rows: 150px 400px 1fr;
  padding-left: 20px;
}

.dashboard {
  display: flex;
  padding: 5px;
  gap: 10px;
  align-items: flex-start;
  justify-content: flex-start;
  font-size: 26px;
  grid-row: 1 / 2;
}

.nav-two {
  padding-top: 40px;
}

ul {
  padding: 0;
  margin-top: 0;
}

a {
  color: white;
  display: flex;
  flex: row;
  justify-content: flex-start;
  align-items: center;
  gap: 20px;
  font-size: 26px;
  padding-left: 5px;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

li {
  list-style-type: none;
  padding-bottom: 30px;
}

.nav-one-list:first-child {
  padding-top: 20px;
}

/*                    CONTENT STYLE                     */

.content {
  background-color: #dce2e5;
  box-shadow: inset 0 10px 5px #dadee0;
  grid-area: 2 / 2 / 6 / 3;
  display: grid;
  grid-template-columns: 2fr 1fr;
}

.left-content {
  padding-left: 30px;
  grid-column: 1 / 2;
}

.left-content-text {
  font-size: 26px;
  margin-bottom: 10px;
}

.project-grid {
  height: 88%;
  display: grid;
  grid-template-columns: repeat(2, minmax(300px, 1fr));
  grid-template-rows: repeat(3, minmax(100px, 1fr));
  gap: 20px;
}

.project {
  background-color: white;
  border-radius: 10px;
  border-left: 10px solid #2c8ec7;
  box-shadow: 5px 5px 5px #dadee0;
  display: grid;
  grid-template-rows: repeat(2, 1fr);
  padding: 20px;
}

.project-upper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  grid-row: 1 / 2;
}

.project-upper > h3 {
  font-size: 26px;
  margin: 0;
}

.project-upper > p {
  color: darkgrey;
  font-size: 16px;
  margin: 0;
}

.project-lower {
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  gap: 10px;
}

